on Mac OS: Textlive + sublime3 +skim -- change file setup/packages for errors using 'xcolor'

--- a/setup/packages.tex
+++ b/setup/packages.tex
@@ -37,7 +37,7 @@
 
 % 图形相关
 \usepackage{graphicx}         % 请在引用图片时务必给出后缀名
-\usepackage[x11names]{xcolor} % 支持彩色
+\usepackage{xcolor} % 支持彩色
 \usepackage[below]{placeins}  % 浮动图形控制宏包
 \usepackage{rotating}	      % 图形和表格的控制
 \usepackage{picinpar}
@@ -45,6 +45,7 @@
 \usepackage{subfigure}           % 插入子图形
 \usepackage[subfigure]{ccaption} % 插图表格的双语标题
 
+\definecolor{LightSteelBlue1}{RGB}{202,225,255}
 
 \usepackage{listings}         % 源代码展示
 \lstset{%
